<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".view.onboarding.OnboardingActivity">

    <ImageView
        android:id="@+id/ivOnboarding"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp"
        tools:src="@drawable/innovation_pana" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/onboarding_welcome"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/ivOnboarding" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/onboarding_desc"
        android:textAlignment="center"
        android:textColor="@color/gray200"
        android:textSize="18sp" />

    <com.syaroful.dicodingstoryapp.custom_view.CustomButtonPrimary
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_button"
        android:inputType="textCapSentences"
        android:text="@string/login" />

    <com.syaroful.dicodingstoryapp.custom_view.CustomButtonSecondary
        android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_button_2"
        android:inputType="textCapSentences"
        android:text="@string/signup" />


</LinearLayout>